--- a/src/output.css
+++ b/src/output.css
@@ -10,19 +10,25 @@
     --color-stone-50: oklch(98.5% 0.001 106.423);
     --color-stone-100: oklch(97% 0.001 106.424);
     --color-stone-200: oklch(92.3% 0.003 48.717);
+    --color-stone-300: oklch(86.9% 0.005 56.366);
     --color-stone-400: oklch(70.9% 0.01 56.259);
     --color-stone-500: oklch(55.3% 0.013 58.071);
     --color-stone-600: oklch(44.4% 0.011 73.639);
     --color-stone-700: oklch(37.4% 0.01 67.558);
+    --color-stone-800: oklch(26.8% 0.007 34.298);
     --color-stone-900: oklch(21.6% 0.006 56.043);
+    --color-stone-950: oklch(14.7% 0.004 49.25);
     --spacing: 0.25rem;
     --text-xs: 0.75rem;
     --text-xs--line-height: calc(1 / 0.75);
+    --text-sm: 0.875rem;
+    --text-sm--line-height: calc(1.25 / 0.875);
     --text-base: 1rem;
     --text-base--line-height: calc(1.5 / 1);
     --text-xl: 1.25rem;
     --text-xl--line-height: calc(1.75 / 1.25);
     --font-weight-bold: 700;
+    --radius-sm: 0.25rem;
     --radius-md: 0.375rem;
     --radius-xl: 0.75rem;
     --default-font-family: var(--font-sans);
@@ -178,8 +184,14 @@
   .visible {
     visibility: visible;
   }
+  .my-4 {
+    margin-block: calc(var(--spacing) * 4);
+  }
   .my-8 {
     margin-block: calc(var(--spacing) * 8);
+  }
+  .mt-16 {
+    margin-top: calc(var(--spacing) * 16);
   }
   .mb-8 {
     margin-bottom: calc(var(--spacing) * 8);
@@ -196,27 +208,73 @@
   .w-1\/3 {
     width: calc(1/3 * 100%);
   }
+  .w-\[35rem\] {
+    width: 35rem;
+  }
+  .w-full {
+    width: 100%;
+  }
   .resize {
     resize: both;
   }
+  .flex-col {
+    flex-direction: column;
+  }
+  .items-center {
+    align-items: center;
+  }
+  .justify-end {
+    justify-content: flex-end;
+  }
+  .gap-1 {
+    gap: calc(var(--spacing) * 1);
+  }
+  .gap-4 {
+    gap: calc(var(--spacing) * 4);
+  }
+  .gap-8 {
+    gap: calc(var(--spacing) * 8);
+  }
   .rounded-md {
     border-radius: var(--radius-md);
+  }
+  .rounded-sm {
+    border-radius: var(--radius-sm);
   }
   .rounded-r-xl {
     border-top-right-radius: var(--radius-xl);
     border-bottom-right-radius: var(--radius-xl);
   }
+  .border-b-2 {
+    border-bottom-style: var(--tw-border-style);
+    border-bottom-width: 2px;
+  }
+  .border-stone-300 {
+    border-color: var(--color-stone-300);
+  }
   .bg-stone-50 {
     background-color: var(--color-stone-50);
+  }
+  .bg-stone-200 {
+    background-color: var(--color-stone-200);
   }
   .bg-stone-700 {
     background-color: var(--color-stone-700);
   }
+  .bg-stone-800 {
+    background-color: var(--color-stone-800);
+  }
   .bg-stone-900 {
     background-color: var(--color-stone-900);
   }
+  .p-1 {
+    padding: calc(var(--spacing) * 1);
+  }
   .px-4 {
     padding-inline: calc(var(--spacing) * 4);
+  }
+  .px-6 {
+    padding-inline: calc(var(--spacing) * 6);
   }
   .px-8 {
     padding-inline: calc(var(--spacing) * 8);
@@ -226,6 +284,10 @@
   }
   .py-16 {
     padding-block: calc(var(--spacing) * 16);
+  }
+  .text-sm {
+    font-size: var(--text-sm);
+    line-height: var(--tw-leading, var(--text-sm--line-height));
   }
   .text-xs {
     font-size: var(--text-xs);
@@ -244,6 +306,15 @@
   .text-stone-400 {
     color: var(--color-stone-400);
   }
+  .text-stone-500 {
+    color: var(--color-stone-500);
+  }
+  .text-stone-600 {
+    color: var(--color-stone-600);
+  }
+  .text-stone-800 {
+    color: var(--color-stone-800);
+  }
   .uppercase {
     text-transform: uppercase;
   }
@@ -258,11 +329,36 @@
       }
     }
   }
+  .hover\:bg-stone-950 {
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--color-stone-950);
+      }
+    }
+  }
   .hover\:text-stone-100 {
     &:hover {
       @media (hover: hover) {
         color: var(--color-stone-100);
       }
+    }
+  }
+  .hover\:text-stone-950 {
+    &:hover {
+      @media (hover: hover) {
+        color: var(--color-stone-950);
+      }
+    }
+  }
+  .focus\:border-stone-600 {
+    &:focus {
+      border-color: var(--color-stone-600);
+    }
+  }
+  .focus\:outline-none {
+    &:focus {
+      --tw-outline-style: none;
+      outline-style: none;
     }
   }
   .md\:w-72 {
@@ -282,6 +378,11 @@
       line-height: var(--tw-leading, var(--text-xl--line-height));
     }
   }
+}
+@property --tw-border-style {
+  syntax: "*";
+  inherits: false;
+  initial-value: solid;
 }
 @property --tw-font-weight {
   syntax: "*";
@@ -343,6 +444,7 @@
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
+      --tw-border-style: solid;
       --tw-font-weight: initial;
       --tw-blur: initial;
       --tw-brightness: initial;
